fix: Arrumado erro de digitação 'mixin'

--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -71,7 +71,7 @@ body
     justify-content: space-between
     padding: 0
 
-    @include mixin.mobile
+    @include mixins.mobile
         flex-direction: column
 
     &-card
@@ -82,7 +82,7 @@ body
         flex-direction: column
         color: variables.$primary-color
 
-        @include mixin.mobile
+        @include mixins.mobile
             width: 90%
             margin-bottom: 6%
 
